--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
     <Spinner
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:id="@+id/purchaseCategorySpinner"
+        android:id="@+id/categorySpinner"
         android:entries="@array/categories"
         android:layout_marginTop="42dp"
         android:textAlignment="center"
@@ -41,7 +41,7 @@
         android:scaleType="fitXY"
         android:background="@drawable/circle"
         android:backgroundTint="@color/primary"
-        android:layout_below="@+id/purchaseCategorySpinner"
+        android:layout_below="@+id/categorySpinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" />
 
