--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -14,7 +14,8 @@
         android:layout_height="350dp"
         android:id="@+id/dynamicArcView"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="30dp" />
 
     <Spinner
         android:layout_width="wrap_content"
