--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -14,8 +14,7 @@
         android:layout_height="350dp"
         android:id="@+id/dynamicArcView"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="30dp" />
+        android:layout_alignParentEnd="true" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -34,4 +33,129 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="40dp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        android:padding="10dp"
+        android:background="@color/primary"
+        android:layout_above="@+id/specificCategoriesSpinner"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="30dp">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="190dp"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
+                android:text=" New Text"
+                android:id="@+id/textView1"
+                android:drawableTint="@color/Food"
+                android:paddingBottom="5dp"
+                android:textSize="25sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
+                android:text=" New Text"
+                android:id="@+id/textView2"
+                android:drawableTint="@color/Entertainment"
+                android:paddingBottom="5dp"
+                android:textSize="25sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
+                android:text=" New Text"
+                android:id="@+id/textView3"
+                android:drawableTint="@color/Housing"
+                android:paddingBottom="5dp"
+                android:textSize="25sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
+                android:text=" New Text"
+                android:id="@+id/textView4"
+                android:drawableTint="@android:color/holo_red_dark"
+                android:paddingBottom="5dp"
+                android:textSize="25sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
+                android:text=" New Text"
+                android:id="@+id/textView5"
+                android:drawableTint="@android:color/holo_red_dark"
+                android:paddingBottom="5dp"
+                android:textSize="25sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
+                android:text=" New Text"
+                android:id="@+id/textView6"
+                android:drawableTint="@android:color/holo_red_dark"
+                android:paddingBottom="5dp"
+                android:textSize="25sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
+                android:text=" New Text"
+                android:id="@+id/textView7"
+                android:drawableTint="@android:color/holo_red_dark"
+                android:paddingBottom="5dp"
+                android:textSize="25sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
+                android:text=" New Text"
+                android:id="@+id/textView8"
+                android:drawableTint="@android:color/holo_red_dark"
+                android:paddingBottom="5dp"
+                android:textSize="25sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
+                android:text=" New Text"
+                android:id="@+id/textView9"
+                android:drawableTint="@android:color/holo_red_dark"
+                android:paddingBottom="5dp"
+                android:textSize="25sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
+                android:text=" New Text"
+                android:id="@+id/textView10"
+                android:drawableTint="@android:color/holo_red_dark"
+                android:paddingBottom="5dp"
+                android:textSize="25sp"/>
+
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
