--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -39,7 +39,6 @@
         android:layout_width="match_parent"
         android:layout_height="220dp"
         android:padding="10dp"
-        android:background="@color/primary"
         android:layout_above="@+id/specificCategoriesSpinner"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -53,19 +52,40 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
-                android:text=" New Text"
+                android:drawableLeft="@android:drawable/btn_star"
+                android:text="Bribes"
                 android:id="@+id/textView1"
-                android:drawableTint="@color/Food"
+                android:drawableTint="@color/Bribes"
                 android:paddingBottom="5dp"
                 android:textSize="25sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
-                android:text=" New Text"
+                android:drawableLeft="@android:drawable/btn_star"
+                android:text="Clothing"
                 android:id="@+id/textView2"
+                android:drawableTint="@color/Clothing"
+                android:paddingBottom="5dp"
+                android:textSize="25sp"
+                android:contextClickable="false" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@android:drawable/btn_star"
+                android:text="Education"
+                android:id="@+id/textView3"
+                android:drawableTint="@color/Education"
+                android:paddingBottom="5dp"
+                android:textSize="25sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@android:drawable/btn_star"
+                android:text="Fun"
+                android:id="@+id/textView4"
                 android:drawableTint="@color/Entertainment"
                 android:paddingBottom="5dp"
                 android:textSize="25sp"/>
@@ -73,30 +93,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
-                android:text=" New Text"
-                android:id="@+id/textView3"
-                android:drawableTint="@color/Housing"
-                android:paddingBottom="5dp"
-                android:textSize="25sp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
-                android:text=" New Text"
-                android:id="@+id/textView4"
-                android:drawableTint="@android:color/holo_red_dark"
-                android:paddingBottom="5dp"
-                android:textSize="25sp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
-                android:text=" New Text"
+                android:drawableLeft="@android:drawable/btn_star"
+                android:text="Family"
                 android:id="@+id/textView5"
-                android:drawableTint="@android:color/holo_red_dark"
+                android:drawableTint="@color/Family"
                 android:paddingBottom="5dp"
                 android:textSize="25sp"/>
         </LinearLayout>
@@ -109,50 +109,50 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
-                android:text=" New Text"
+                android:drawableLeft="@android:drawable/btn_star"
+                android:text="Food"
                 android:id="@+id/textView6"
-                android:drawableTint="@android:color/holo_red_dark"
+                android:drawableTint="@color/Food"
                 android:paddingBottom="5dp"
                 android:textSize="25sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
-                android:text=" New Text"
+                android:drawableLeft="@android:drawable/btn_star"
+                android:text="Housing"
                 android:id="@+id/textView7"
-                android:drawableTint="@android:color/holo_red_dark"
+                android:drawableTint="@color/Housing"
                 android:paddingBottom="5dp"
                 android:textSize="25sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
-                android:text=" New Text"
+                android:drawableLeft="@android:drawable/btn_star"
+                android:text="Medical"
                 android:id="@+id/textView8"
-                android:drawableTint="@android:color/holo_red_dark"
+                android:drawableTint="@color/Medical"
                 android:paddingBottom="5dp"
                 android:textSize="25sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
-                android:text=" New Text"
+                android:drawableLeft="@android:drawable/btn_star"
+                android:text="Savings"
                 android:id="@+id/textView9"
-                android:drawableTint="@android:color/holo_red_dark"
+                android:drawableTint="@color/Savings"
                 android:paddingBottom="5dp"
                 android:textSize="25sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/abc_ic_star_black_16dp"
-                android:text=" New Text"
+                android:drawableLeft="@android:drawable/btn_star"
+                android:text="Travel"
                 android:id="@+id/textView10"
-                android:drawableTint="@android:color/holo_red_dark"
+                android:drawableTint="@color/Travel"
                 android:paddingBottom="5dp"
                 android:textSize="25sp"/>
 
