--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,15 +9,15 @@
     <color name="icons">#212121</color>
     <color name="divider">#B6B6B6</color>
 
-    <color name="Food">#FF5253</color>
+    <color name="Food">#ff5253</color>
     <color name="Entertainment">#00bcd4</color>
     <color name="Housing">#ffc107</color>
-    <color name="Family">#673AB7</color>
-    <color name="Clothing">#8BC34A</color>
-    <color name="Bribes">#CDDC39</color>
-    <color name="Medical">#607D8B</color>
-    <color name="Education">#FF4081</color>
-    <color name="Travel">#FF4081</color>
-    <color name="Savings">#FFEB3B</color>
+    <color name="Family">#673ab7</color>
+    <color name="Clothing">#8bc34a</color>
+    <color name="Bribes">#cddc39</color>
+    <color name="Medical">#607d8b</color>
+    <color name="Education">#ff4081</color>
+    <color name="Travel">#ff4081</color>
+    <color name="Savings">#ffeb3b</color>
 
 </resources>
