Refactor chart to gather Purchases by Category and display each Category as its own color, refactor color assignment method to output the correct colors when user has more than one Purchase of a particular Category

--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -94,7 +94,7 @@
                 android:drawableLeft="@android:drawable/btn_star"
                 android:text="Fun"
                 android:id="@+id/textView4"
-                android:drawableTint="@color/Entertainment"
+                android:drawableTint="@color/Fun"
                 android:paddingBottom="5dp"
                 android:textSize="25sp"/>
 
