--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="divider">#B6B6B6</color>
 
     <color name="Food">#ff5253</color>
-    <color name="Entertainment">#00bcd4</color>
+    <color name="Fun">#00bcd4</color>
     <color name="Housing">#ffc107</color>
     <color name="Family">#673ab7</color>
     <color name="Clothing">#8bc34a</color>
